MINOR Fixed alignment of "Create translation" button in CMS - removed unnecessary horizontal floating and removed background
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@69883 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -396,8 +396,8 @@ div.originallang_holder.field.CompositeField.nolabel {
 	padding-right: 4px;
 }
 
-.right form div.createTranslationButton {
-	clear: right;
+.right form .field.createTranslationButton .middleColumn {
+	background: none;
 }
 
 .translatingMessage {
